# agent-builder

./: .env.example  README.md  pyproject.toml
.forge/: current
.forge/proverka-riskov-arendy/: CHANGELOG.md  HANDOFF.md  blueprint.json  spec.md
.forge/proverka-riskov-arendy/agent/: README.md  agent.py  agent.yaml  contract.schema.json  (+2 more)
.forge_live/: current
.forge_live/detektor-ochevidnyh-riskov-prko/: CHANGELOG.md  HANDOFF.md  blueprint.json  spec.md
.forge_live/ekspertiza-bankovskoy-garantii/: CHANGELOG.md  HANDOFF.md  blueprint.json  spec.md
.forge_live/izvlechenie-rekvizitov-scheta/: CHANGELOG.md  HANDOFF.md  blueprint.json  spec.md
.forge_live/klassifikator-dokumentov/: CHANGELOG.md  HANDOFF.md  blueprint.json  spec.md
.forge_live/revyu-paketa-sdelki/: blueprint.json
.forge_live/risk-revyu-podryada/: CHANGELOG.md  HANDOFF.md  blueprint.json  spec.md
examples/: demo.sh  instructions_nda.txt  sample_contract.txt  sample_lease.txt
forge/: __init__.py  __main__.py  cli.py  config.py  console.py
forge/archetypes/: __init__.py  base.py  builtin.py
forge/clarify/: __init__.py  critics.py  engine.py
forge/generate/: __init__.py  codegen.py
forge/integrations/: __init__.py  _vendor.py  documents.py  llm.py  stub_brain.py
forge/model/: __init__.py  blueprint.py
forge/pipeline/: __init__.py  contract.py  intake.py  packaging.py  service.py  synthesis.py  testing.py
forge/runtime/: __init__.py  confidence.py  executor.py  knowledge.py  rules.py  spec.py  validation.py
forge/store/: __init__.py  workspace.py
tests/: test_pipeline.py
(+46 files in other folders)
