[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-agent-forge"
version = "0.1.0"
description = "CLI мета-агент, который проектирует, тестирует и упаковывает специализированных AI-агентов для автоматизации юридических процессов."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Legal Agent Forge" }]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Среда выполнения агента может извлекать текст из реальных документов,
# переиспользуя пакет `extractors` (см. референсы). Эти тяжёлые парсеры опциональны.
documents = ["charset-normalizer>=3.0", "PyMuPDF>=1.23", "python-docx>=1.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
forge = "forge.__main__:main"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.ruff]
line-length = 100
target-version = "py310"
